--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "zachs-ts-vscode-config",
   "version": "0.0.3",
-  "bin": "./download.js"
+  "bin": {
+    "setup-script": "./download.js"
+  }
 }
